--- a/app/src/main/res/layout/fragment_categorias.xml
+++ b/app/src/main/res/layout/fragment_categorias.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.andrea.recyclerview.CategoriasFrag">
+    tools:context="mx.itesm.kuali.kuali.CategoriasFrag">
 
     <!-- TODO: Update blank fragment layout -->
     <android.support.v7.widget.RecyclerView
