--- a/app/src/main/res/layout/activity_pantalla_producto.xml
+++ b/app/src/main/res/layout/activity_pantalla_producto.xml
@@ -22,19 +22,15 @@
         <android.support.v4.view.ViewPager
             android:id="@+id/viewPager"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp">
-
-        </android.support.v4.view.ViewPager>
+            android:layout_height="250dp" />
 
         <LinearLayout
             android:id="@+id/sliderDots"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="16dp"
             android:gravity="center_vertical|center_horizontal"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:paddingTop="10dp">
 
         </LinearLayout>
 
