--- a/app/src/main/res/layout/activity_tab_main.xml
+++ b/app/src/main/res/layout/activity_tab_main.xml
@@ -29,6 +29,7 @@
         </android.support.v7.widget.Toolbar>
 
         <SearchView
+            android:id="@+id/busqueda_completa"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
