--- a/app/src/main/res/layout/product_card.xml
+++ b/app/src/main/res/layout/product_card.xml
@@ -24,7 +24,8 @@
                 android:layout_height="@dimen/thumbnail_height"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:clickable="true"
-                android:scaleType="fitXY" />
+                android:scaleType="fitCenter"
+                card_view:srcCompat="@drawable/cargando" />
 
             <TextView
                 android:id="@+id/title"
