--- a/app/src/main/res/layout/fragment_no_products.xml
+++ b/app/src/main/res/layout/fragment_no_products.xml
@@ -8,7 +8,7 @@
 
     <TextView
         android:id="@+id/textView8"
-        android:layout_width="294dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
