--- a/app/src/main/res/layout/pager_layout.xml
+++ b/app/src/main/res/layout/pager_layout.xml
@@ -8,7 +8,7 @@
     <ImageView
         android:id="@+id/ivProducto"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scaleType="fitCenter"
+        android:layout_height="300dp"
+        android:scaleType="fitXY"
         app:srcCompat="@drawable/cargando" />
 </LinearLayout>
