--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,8 @@
     <color name="colorPrimary">#3f51b5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#ff4081</color>
-    <color name="RosaMex">#ac0050</color>
+    <color name="RosaMex">#2a2a4e</color>
+    <color name="colorprincipal">#2a2a4e</color>
+    <color name="naranjakuali">#ff8226</color>
+    <color name="rosakuali">#fa1f6f</color>
 </resources>
