--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#3f51b5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#ff4081</color>
+    <color name="colorAccent">#ac004f</color>
     <color name="RosaMex">#2a2a4e</color>
     <color name="colorprincipal">#2a2a4e</color>
     <color name="naranjakuali">#ff8226</color>
