--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,7 +12,8 @@
     <dimen name="backdrop_title">30dp</dimen>
     <dimen name="backdrop_subtitle">18dp</dimen>
     <dimen name="card_margin">5dp</dimen>
-    <dimen name="card_album_radius">15dp</dimen>
+    <dimen name="card_album_radius">0dp</dimen>
+    <dimen name="card_cat_radius">15dp</dimen>
     <dimen name="thumbnail_height">140dp</dimen>
     <dimen name="nom_producto_padding">10dp</dimen>
     <dimen name="nom_producto">15dp</dimen>
