Ajustes CardView Categorias

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="colorprincipal">#2a2a4e</color>
     <color name="naranjakuali">#ff8226</color>
     <color name="rosakuali">#fa1f6f</color>
+    <color name="marinokuali">#114eab</color>
+    <color name="celestekuali">#00a5bb</color>
 </resources>
