--- a/app/src/main/res/layout/category_card.xml
+++ b/app/src/main/res/layout/category_card.xml
@@ -1,30 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="191dp"
         android:layout_gravity="center"
         android:layout_margin="@dimen/card_margin"
+        android:background="@color/cardview_light_background"
         android:elevation="3dp"
         card_view:cardCornerRadius="@dimen/card_cat_radius">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@color/cardview_light_background"
             android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/thumbnail"
                 android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:background="?attr/selectableItemBackgroundBorderless"
+                android:layout_height="144dp"
                 android:clickable="true"
-                android:scaleType="fitCenter"
+                android:scaleType="centerCrop"
                 card_view:srcCompat="@drawable/cargando" />
 
             <TextView
@@ -35,8 +37,10 @@
                 android:paddingBottom="5dp"
                 android:paddingLeft="@dimen/nom_producto_padding"
                 android:paddingRight="@dimen/nom_producto_padding"
-                android:paddingTop="5dp"
-                android:textAppearance="@android:style/TextAppearance.Material.Menu" />
+                android:paddingTop="10dp"
+                android:textAppearance="@android:style/TextAppearance.Material.Menu"
+                android:textColor="@color/colorprincipal"
+                android:textSize="18sp" />
 
 
         </LinearLayout>
