--- a/app/src/main/res/layout/activity_tab_main.xml
+++ b/app/src/main/res/layout/activity_tab_main.xml
@@ -38,7 +38,7 @@
             android:minHeight="1dp"
             android:paddingBottom="0dp"
             android:paddingTop="0dp"
-            android:scaleType="centerCrop"
+            android:scaleType="fitCenter"
             app:layout_collapseMode="parallax"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
             app:popupTheme="@style/AppTheme.PopupOverlay"
