--- a/app/src/main/res/layout/category_card.xml
+++ b/app/src/main/res/layout/category_card.xml
@@ -8,7 +8,7 @@
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
         android:layout_width="match_parent"
-        android:layout_height="191dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_margin="@dimen/card_margin"
         android:background="@color/cardview_light_background"
@@ -26,7 +26,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="144dp"
                 android:clickable="true"
-                android:scaleType="centerCrop"
+                android:scaleType="fitCenter"
                 card_view:srcCompat="@drawable/cargando" />
 
             <TextView
