--- a/app/src/main/res/layout/category_card.xml
+++ b/app/src/main/res/layout/category_card.xml
@@ -26,7 +26,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="144dp"
                 android:clickable="true"
-                android:scaleType="fitCenter"
+                android:scaleType="centerCrop"
                 card_view:srcCompat="@drawable/cargando" />
 
             <TextView
